fix(badges): Re-align Nested Children (#3576)

--- a/ui/components/badges/base/_index.scss
+++ b/ui/components/badges/base/_index.scss
@@ -30,11 +30,6 @@
   .slds-icon_container {
     vertical-align: middle;
   }
-
-  // Only inline or inline-block are supported as children of a badge
-  > * {
-    vertical-align: bottom;
-  }
 }
 
 /**
